fix(theme): fix system mode and pass correctly in the theme
Removed unnecessary prop from the autocomplete component on dialog example
Fixed perfect-scrollbar width in vertical menu

--- a/typescript-version/full-version/src/app/globals.css
+++ b/typescript-version/full-version/src/app/globals.css
@@ -93,6 +93,7 @@ ul:not([class]) {
     }
   }
   .ps__rail-y {
+    inline-size: 10px;
     &:hover,
     &:focus,
     &.ps--clicking {
